[tool.poetry]
name = "repl_python3_Voice-Chat-Ping"
version = "0.1.0"
description = ""
authors = ["MaliciousFiles <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
Flask = "^2.3.2"
Flask-Compress = "^1.10.1"
gevent = "^21.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
